--- a/TDD/Base.lproj/Main.storyboard
+++ b/TDD/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -39,9 +40,6 @@
                                         <state key="normal" title="Log In"/>
                                         <connections>
                                             <action selector="LogInButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rBo-fx-31v"/>
-                                            <segue destination="q1S-8w-SBi" kind="popoverPresentation" popoverAnchorView="BmJ-FQ-erE" id="g0t-HE-kFR">
-                                                <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                                            </segue>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -66,6 +64,7 @@
                         <outlet property="emailTF" destination="hV0-0h-re0" id="jZV-vi-kBl"/>
                         <outlet property="logInButton" destination="BmJ-FQ-erE" id="rJ6-ep-FAh"/>
                         <outlet property="passwordTF" destination="MId-Uj-srF" id="MpF-2y-rrp"/>
+                        <segue destination="q1S-8w-SBi" kind="show" identifier="congratulations" id="Vfj-D5-H4G"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -94,6 +93,7 @@
                             <constraint firstItem="jZh-fL-Jb7" firstAttribute="centerY" secondItem="ebL-8X-vQ0" secondAttribute="centerY" id="UVv-rt-TFJ"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="25j-GA-6KF"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vOC-vx-TmE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
